@@ -1,3 +1,9 @@
+2017-05-12  Andi Kleen  <ak@linux.intel.com>
+
+	PR testsuite/77684
+	* lib/target-supports.exp (profopt-perf-wrapper):
+	Add -m8 option to increase parallelism.
+
 2017-05-12  Thomas Schwinge  <thomas@codesourcery.com>
 
 	* c-c++-common/goacc/parallel-dims-1.c: New file.
